<resources>
    <string name="app_name">Photo Story</string>
    <string name="action_create">Create</string>
    <string name="view_all">All Stories</string>
    <string name="story_details">The Story</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_send">Send</string>
    <string name="button_view">View Story</string>
    <string name="title_of_story">Title : </string>
    <string name="synopsis">Synopsis : </string>
    <string name="date">Dt : </string>
    <string name="add_photos">Add Photos</string>
    <string name="save_story">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="delete">Delete</string>
    <string name="create_screen">Create Story</string>
</resources>
