<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.photostory.CreateEditActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_of_story"/>

    <EditText
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/title"/>

    <TextView
        android:id="@+id/synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_alignLeft="@+id/title"
        android:text="@string/synopsis"/>

    <EditText
        android:id="@+id/synopsis_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/synopsis"
        android:layout_alignLeft="@+id/synopsis"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/synopsis_text"
        android:layout_alignLeft="@+id/synopsis_text"
        android:text="@string/date"/>

    <Button
        android:id="@+id/add_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignLeft="@+id/date"
        android:text="@string/add_photos"
        android:onClick="onAddPhotosClick"/>

    <Button
        android:id="@+id/save_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_photos"
        android:layout_alignLeft="@+id/add_photos"
        android:text="@string/save_story"
        android:onClick="onSaveClick"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/save_story"
        android:layout_alignBottom="@+id/save_story"
        android:text="@string/cancel"/>

</RelativeLayout>
