<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.photostory.StoryDetailsActivity"
    android:columnCount="3">

    <TextView
        android:id="@+id/story_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

    <CheckBox
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:onClick="onFavoriteClick"/>

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="onEditClick"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:layout_row="1"
        android:layout_column="1"
        android:onClick="onDeleteClick"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:layout_row="1"
        android:layout_column="2"
        android:onClick="onSendClick"/>

    <Button
        android:id="@+id/view_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:onClick="onViewClick"/>

</GridLayout>
